--- a/style-sheets/styles.css
+++ b/style-sheets/styles.css
@@ -116,10 +116,13 @@ hr {
 
 .container-projects .project-img {
     background-color: #CBBD6C;
-    width: 100%;
+    width: 400px;
     border-radius: 5px;
-    padding: 10px;
     position: relative;
+    height: 210px;
+    position: relative;
+    overflow: hidden;
+    flex-wrap: wrap;
 }
 
 .tools-bar {
@@ -135,23 +138,37 @@ hr {
 
 .container-projects .project-img a {
     width: 100%;
+    height: 100%;
 }
 
 .container-projects .project-img a img {
-    width: 100%;
+    width: 95%;
+    transition:all 250ms ease-out;
 }
 
-.project-description {
-    display: none;
+.container-projects .project-img a  .project-des{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    width: 100%;
     height: 100%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    background-color: #2b2d31f8;
+    visibility: hidden;
+    color: #F8F8F8;
+    font-family: 'Raleway', sans-serif;
+    padding: 8%;
+    transition:all 250ms ease-out;
+    border: 1px solid #CBBD6C;
     border-radius: 5px;
+    opacity: 0;
+    font-size: 20px;
 }
+
+.container-projects .project-img a:hover > .project-des{
+    visibility: visible;
+    opacity: 1;
+}
+
+
 
 .container-info {
     display: flex;
@@ -172,17 +189,16 @@ hr {
     gap: 10px;
 }
 
-.container-txt p{
+.container-txt p {
     font-size: 20px;
 }
-
 
 .external-link {
     text-decoration: none;
     display: flex;
 }
 
-.external-link h3{
+.external-link h3 {
     font-size: 40px;
 }
 
@@ -194,7 +210,7 @@ hr {
     width: 70%;
 }
 
-.container-contacts{
+.container-contacts {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -202,13 +218,14 @@ hr {
 }
 
 .ul-contact {
-    
+
     display: flex;
     justify-content: center;
     margin: 5%;
     width: 60%;
 }
-.ul-contact a{
+
+.ul-contact a {
     display: flex;
     justify-content: center;
 }
@@ -308,13 +325,13 @@ hr {
         font-size: 16px;
     }
 
-    .container-projects{
+    .container-projects {
         flex-direction: column;
         gap: 60px;
         padding: 0%;
     }
 
-    .project{
+    .project {
         width: 100%;
     }
 
@@ -322,36 +339,36 @@ hr {
         width: 90%;
     }
 
-    .project-img img{
+    .project-img img {
         width: 90%;
     }
 
-    .ul-contact{
+    .ul-contact {
         flex-wrap: wrap;
     }
 
-    .container-info{
+    .container-info {
         flex-direction: column;
-        width: 100%;
-    } 
-
-    .subcontainer-info{
         width: 100%;
     }
 
-    .movil-margin{
+    .subcontainer-info {
+        width: 100%;
+    }
+
+    .movil-margin {
         margin-top: 10px;
     }
 
-    h2{
+    h2 {
         font-size: 48px;
     }
 
-    .container-name h1{
+    .container-name h1 {
         font-size: 60px;
     }
 
-    .container-name h3{
+    .container-name h3 {
         font-size: 30px;
     }
 }
